<resources>
    <string name="app_name">Schedule</string>
    <string name="add_timetable">Add</string>
    <string-array name="days_of_the_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="title_of_lesson">Название предмета</string>
    <string name="name_of_teacher">Имя преподавателя</string>
    <string name="number_of_class">Номер аудитории</string>
    <string name="time_of_starting">Время начала</string>
    <string name="time_of_ending">Время окончания</string>
    <string name="rewrite_lesson">Редактировать расписание</string>
    <string name="add_lesson">Добавить день</string>
    <string-array name="testM">
        <item> Monday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
    <string-array name="testT">
        <item> tuesday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
    <string-array name="testW">
        <item> wednsday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
    <string-array name="testTh">
        <item> thursday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
    <string-array name="testFr">
        <item> friday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
    <string-array name="testS">
        <item> saturday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
    <string-array name="testSun">
        <item> sunday </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
        <item> dfsdfsd </item>
    </string-array>
</resources>
