<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexey.schedule.Information">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_of_lesson"
        android:id="@+id/title_of_lesson"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/name_of_teacher"
        android:layout_alignEnd="@+id/name_of_teacher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_of_teacher"
        android:id="@+id/name_of_teacher"
        android:layout_below="@+id/title_of_lesson"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/number_of_class"
        android:id="@+id/number_of_class"
        android:layout_below="@+id/name_of_teacher"
        android:layout_alignLeft="@+id/title_of_lesson"
        android:layout_alignStart="@+id/title_of_lesson" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_of_starting"
        android:id="@+id/time_of_starting"
        android:layout_below="@+id/number_of_class"
        android:layout_alignLeft="@+id/number_of_class"
        android:layout_alignStart="@+id/number_of_class" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_of_ending"
        android:id="@+id/time_of_ending"
        android:layout_below="@+id/time_of_starting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
